--- a/EmpresaMain/nbproject/project.properties
+++ b/EmpresaMain/nbproject/project.properties
@@ -79,7 +79,7 @@ main.class=empresamain.EmpresaMain
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_25
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
